--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <ArrayOfMenu xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Menu id="home" title="首页" icon="glyphicon-th-large" url="/Home"></Menu>
+  <Menu id="home" title="首页" icon="glyphicon-th-large" url="/Home" authVal="1"></Menu>
 
-  <Menu id="system" title="系统管理" icon="glyphicon-cog">
-    <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users">
+  <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="2">
+    <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="4">
     </Menu>
-    <Menu id="roles" title="角色管理" icon="glyphicon-asterisk" url="/Roles">
+    <Menu id="roles" title="角色管理" icon="glyphicon-asterisk" url="/Roles" authVal="8">
     </Menu>
-    <Menu id="password" title="修改密码" icon="glyphicon-edit" url="/PassWord">
+    <Menu id="password" title="修改密码" icon="glyphicon-edit" url="/PassWord" authVal="16">
     </Menu>
   </Menu>
 </ArrayOfMenu>
