--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -2,12 +2,19 @@
 <ArrayOfMenu xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <Menu id="home" title="首页" icon="glyphicon-th-large" url="/Home" authVal="1"></Menu>
 
-  <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="2">
-    <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="4">
+  <Menu id="store" title="门店管理" icon="glyphicon-home" authVal="64">
+    <Menu id="storegrant" title="门店授权" icon="glyphicon-ok-circle" url="/StoreGrant" authVal="128">
     </Menu>
-    <Menu id="roles" title="角色管理" icon="glyphicon-asterisk" url="/Roles" authVal="8">
+    <Menu id="storeinfo" title="门店信息" icon="glyphicon-eye-open" url="/StoreInfo" authVal="512">
     </Menu>
-    <Menu id="password" title="修改密码" icon="glyphicon-edit" url="/PassWord" authVal="16">
+  </Menu>
+
+  <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
+    <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="8">
+    </Menu>
+    <Menu id="roles" title="角色管理" icon="glyphicon-asterisk" url="/Roles" authVal="16">
+    </Menu>
+    <Menu id="password" title="修改密码" icon="glyphicon-edit" url="/PassWord" authVal="32">
     </Menu>
   </Menu>
 </ArrayOfMenu>
