--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -9,6 +9,13 @@
     </Menu>
   </Menu>
 
+  <Menu id="product" title="商品管理" icon="glyphicon-glass" authVal="1024">
+    <Menu id="productset" title="商品维护" icon="glyphicon-log-in" url="/ProductSet" authVal="2048">
+    </Menu>
+    <Menu id="productquery" title="商品查询" icon="glyphicon-search" url="/ProductQuery" authVal="4096">
+    </Menu>
+  </Menu>
+
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
     <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="8">
     </Menu>
