--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -16,6 +16,13 @@
     </Menu>
   </Menu>
 
+  <Menu id="order" title="订单管理" icon="glyphicon-list-alt" authVal="8192">
+    <Menu id="orderset" title="采购订单" icon="glyphicon-download-alt" url="/OrderSet" authVal="16384">
+    </Menu>
+    <Menu id="orderquery" title="订单查询" icon="glyphicon-search" url="/OrderQuery" authVal="32768">
+    </Menu>
+  </Menu>
+
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
     <Menu id="users" title="用户管理" icon="glyphicon-user" url="/Users" authVal="8">
     </Menu>
