--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -16,11 +16,7 @@
     </Menu>
   </Menu>
 
-  <Menu id="order" title="订单管理" icon="glyphicon-list-alt" authVal="8192">
-    <Menu id="orderset" title="采购订单" icon="glyphicon-download-alt" url="/OrderSet" authVal="16384">
-    </Menu>
-    <Menu id="orderquery" title="订单查询" icon="glyphicon-search" url="/OrderQuery" authVal="32768">
-    </Menu>
+  <Menu id="order" title="采购订单" icon="glyphicon-list-alt" authVal="8192" url="/Order">
   </Menu>
 
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
