--- a/HWYZ/HWYZ.csproj
+++ b/HWYZ/HWYZ.csproj
@@ -190,6 +190,8 @@
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\OrderEditController.cs" />
     <Compile Include="Controllers\OrderViewController.cs" />
+    <Compile Include="Controllers\ProductDeliveController.cs" />
+    <Compile Include="Controllers\DeliveEditController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Filters\UserAuthorizeAttribute.cs" />
     <Compile Include="Filters\AdminAuthorizeAttribute.cs" />
@@ -301,6 +303,7 @@
     <Content Include="Scripts\datetimepicker\bootstrap-datetimepicker.min.css" />
     <Content Include="Scripts\datetimepicker\bootstrap-datetimepicker.min.js" />
     <Content Include="Scripts\Page\order.js" />
+    <Content Include="Scripts\Page\delive.js" />
     <Content Include="Scripts\webuploader\Uploader.swf" />
     <Content Include="Scripts\webuploader\webuploader.css" />
     <Content Include="Content\zTreeStyle.css" />
@@ -392,6 +395,7 @@
     <Content Include="Views\Password\Index.cshtml" />
     <Content Include="route.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\Add.cshtml" />
@@ -416,6 +420,11 @@
     <Content Include="Views\OrderEdit\Edit.cshtml" />
     <Content Include="Views\OrderView\Index.cshtml" />
     <Content Include="Views\OrderView\List.cshtml" />
+    <Content Include="Views\ProductDelive\List.cshtml" />
+    <Content Include="Views\ProductDelive\Index.cshtml" />
+    <Content Include="Views\DeliveEdit\Edit.cshtml" />
+    <Content Include="Views\DeliveEdit\Index.cshtml" />
+    <Content Include="Views\DeliveEdit\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
