--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -12,7 +12,7 @@
   <Menu id="product" title="商品管理" icon="glyphicon-glass" authVal="1024">
     <Menu id="productset" title="商品维护" icon="glyphicon-log-in" url="/ProductSet" authVal="2048">
     </Menu>
-    <Menu id="productquery" title="商品查询" icon="glyphicon-search" url="/ProductQuery" authVal="4096">
+    <Menu id="productquery" title="商品配送" icon="glyphicon-plane" url="/ProductDelive" authVal="4096">
     </Menu>
   </Menu>
 
