--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -9,7 +9,7 @@
     </Menu>
   </Menu>
 
-  <Menu id="product" title="商品管理" icon="glyphicon-glass" authVal="1024">
+  <Menu id="product" title="商品管理" icon="glyphicon-cutlery" authVal="1024">
     <Menu id="productset" title="商品维护" icon="glyphicon-log-in" url="/ProductSet" authVal="2048">
     </Menu>
     <Menu id="productquery" title="商品配送" icon="glyphicon-plane" url="/ProductDelive" authVal="4096">
@@ -17,6 +17,11 @@
   </Menu>
 
   <Menu id="order" title="采购订单" icon="glyphicon-list-alt" authVal="8192" url="/Order">
+  </Menu>
+
+  <Menu id="send" title="送餐管理" icon="glyphicon-send" authVal="16384">
+    <Menu id="courier" title="送餐员" icon="glyphicon-sunglasses" url="/Couriers" authVal="32768">
+    </Menu>
   </Menu>
 
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
