--- a/HWYZ/route.config
+++ b/HWYZ/route.config
@@ -22,6 +22,8 @@
   <Menu id="send" title="送餐管理" icon="glyphicon-send" authVal="16384">
     <Menu id="courier" title="送餐员" icon="glyphicon-sunglasses" url="/Couriers" authVal="32768">
     </Menu>
+    <Menu id="location" title="送餐地址" icon="glyphicon-tags" url="/Locations" authVal="65536">
+    </Menu>
   </Menu>
 
   <Menu id="system" title="系统管理" icon="glyphicon-cog" authVal="4">
